Evaluación de las exposiciones de la semana pasada

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -24,9 +24,9 @@
   | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                            | [[https://youtu.be/L2jatt2uY18][Ver aquí]] | [[./AcostaAlan-RubioAngel/Exposicion-SO-AcostaAlanyRubioAngel.pdf][Documento]], [[./AcostaAlan-RubioAngel/Presentacion-UNIX.pdf][Presentación]]                                                                         | [[./AcostaAlan-RubioAngel/resultados_encuesta.pdf][Resultados de la encuesta]], [[./AcostaAlan-RubioAngel/evaluacion.org][Evaluación global]] |
   | 2025.04.21 | Mecanismos para mantener la coherencia en caché                                               | María Fernanda Ayala y Elizabeth Portilla                 | [[https://youtu.be/FWyVcgZAISI][Ver aquí]] | [[./AyalaMaria-PortillaElizabeth/Documento_presentacion.pdf][Documento]], [[./AyalaMaria-PortillaElizabeth/PresentacionExpo_MecanismosParaMantenerLaCoherenciaEnCache.pdf][Presentación]]                                                                         | [[./AyalaMaria-PortillaElizabeth/resultados_encuesta.pdf][Resultados de la encuesta]], [[./AyalaMaria-PortillaElizabeth/evaluacion.org][Evaluación global]] |
   | 2025.04.21 | TempleOS: Las implicaciones de un sistema operativo operando en el anillo 0 de protección     | Barvara Juárez y Jesus Talonia                            | [[https://youtu.be/2pWFz7PlSrw][Ver aquí]] | [[./JuarezBarvara_TaloniaJesus/TempleOS-Escrito.pdf][Documento]], [[./JuarezBarvara_TaloniaJesus/TempleOS-Presentacion.pdf][Presentación]]                                                                         | [[./JuarezBarvara_TaloniaJesus/resultados_encuesta.pdf][Resultados de la encuesta]], [[./JuarezBarvara_TaloniaJesus/evaluacion.org][Evaluación global]] |
-  | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón            | [[https://youtu.be/Xwwbp-mT6C0][Ver aquí]] | [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.pdf][Documento]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.pdf][Presentación]], [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.tex][Documento (fuente)]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.md][Presentación (fuente)]]                              | [[https://encuestas.iiec.unam.mx/869312][Evaluación de los compañeros]]                 |
-  | 2025.04.28 | Concurrencia en la programación funcional                                                     | Leonardo Mikel Cervantes, Arnau Roger Solé y Javier Arias | [[https://youtu.be/FjvyEtQZzwc][Ver aquí]] | [[./AriasJavier-CervantesLeonardo-SoleArnau/Programación funcional.pdf][Documento]], [[./AriasJavier-CervantesLeonardo-SoleArnau/Presentacion programacion funcional.pdf][Presentación]], [[./AriasJavier-CervantesLeonardo-SoleArnau/main.ml][Código ejemplo]]                                                         | [[https://encuestas.iiec.unam.mx/277119][Evaluación de los compañeros]]                 |
-  | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                                | [[https://youtu.be/27dpaty8a80][Ver aquí]] | [[./CanoCarlos-CortesAngel/SO_en_la_nube.pdf][Documento]], [[./CanoCarlos-CortesAngel/Sistemas operativos para la nube.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/643374][Evaluación de los compañeros]]                 |
+  | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón            | [[https://youtu.be/Xwwbp-mT6C0][Ver aquí]] | [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.pdf][Documento]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.pdf][Presentación]], [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.tex][Documento (fuente)]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.md][Presentación (fuente)]]                              | [[./CalderonEnrique-UgartecheaLuis/resultados_encuesta.pdf][Resultados de la encuesta]], [[./CalderonEnrique-UgartecheaLuis/evaluacion.org][Evaluación global]] |
+  | 2025.04.28 | Concurrencia en la programación funcional                                                     | Leonardo Mikel Cervantes, Arnau Roger Solé y Javier Arias | [[https://youtu.be/FjvyEtQZzwc][Ver aquí]] | [[./AriasJavier-CervantesLeonardo-SoleArnau/Programación funcional.pdf][Documento]], [[./AriasJavier-CervantesLeonardo-SoleArnau/Presentacion programacion funcional.pdf][Presentación]], [[./AriasJavier-CervantesLeonardo-SoleArnau/main.ml][Código ejemplo]]                                                         | [[./AriasJavier-CervantesLeonardo-SoleArnau/resultados_encuesta.pdf][Resultados de la encuesta]], [[./AriasJavier-CervantesLeonardo-SoleArnau/evaluacion.org][Evaluación global]] |
+  | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                                | [[https://youtu.be/27dpaty8a80][Ver aquí]] | [[./CanoCarlos-CortesAngel/SO_en_la_nube.pdf][Documento]], [[./CanoCarlos-CortesAngel/Sistemas operativos para la nube.pdf][Presentación]]                                                                         | [[./CanoCarlos-CortesAngel/resultados_encuesta.pdf][Resultados de la encuesta]], [[CanoCarlos-CortesAngel/evaluacion.org][Evaluación global]] |
   | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela                  |          |                                                                                                 |                                              |
   | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila                     |          |                                                                                                 |                                              |
   | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez                          |          |                                                                                                 |                                              |
