--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -27,9 +27,9 @@
   | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón            | [[https://youtu.be/Xwwbp-mT6C0][Ver aquí]] | [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.pdf][Documento]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.pdf][Presentación]], [[./CalderonEnrique-UgartecheaLuis/Embinux-texto.tex][Documento (fuente)]], [[./CalderonEnrique-UgartecheaLuis/Embinux-presentacion.md][Presentación (fuente)]]                              | [[./CalderonEnrique-UgartecheaLuis/resultados_encuesta.pdf][Resultados de la encuesta]], [[./CalderonEnrique-UgartecheaLuis/evaluacion.org][Evaluación global]] |
   | 2025.04.28 | Concurrencia en la programación funcional                                                     | Leonardo Mikel Cervantes, Arnau Roger Solé y Javier Arias | [[https://youtu.be/FjvyEtQZzwc][Ver aquí]] | [[./AriasJavier-CervantesLeonardo-SoleArnau/Programación funcional.pdf][Documento]], [[./AriasJavier-CervantesLeonardo-SoleArnau/Presentacion programacion funcional.pdf][Presentación]], [[./AriasJavier-CervantesLeonardo-SoleArnau/main.ml][Código ejemplo]]                                                         | [[./AriasJavier-CervantesLeonardo-SoleArnau/resultados_encuesta.pdf][Resultados de la encuesta]], [[./AriasJavier-CervantesLeonardo-SoleArnau/evaluacion.org][Evaluación global]] |
   | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                                | [[https://youtu.be/27dpaty8a80][Ver aquí]] | [[./CanoCarlos-CortesAngel/SO_en_la_nube.pdf][Documento]], [[./CanoCarlos-CortesAngel/Sistemas operativos para la nube.pdf][Presentación]]                                                                         | [[./CanoCarlos-CortesAngel/resultados_encuesta.pdf][Resultados de la encuesta]], [[CanoCarlos-CortesAngel/evaluacion.org][Evaluación global]] |
-  | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela                  |          |                                                                                                 |                                              |
-  | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila                     |          |                                                                                                 |                                              |
-  | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez                          |          |                                                                                                 |                                              |
+  | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela                  | [[https://youtu.be/_Z9VpCACiHk][Ver aquí]] | [[./JimenezYordi-ValenzuelaGustavo/presentacion.pdf][Presentación]], [[./JimenezYordi-ValenzuelaGustavo/LZNT1.cpp][Código ejemplo (compresión)]]                                                       | [[https://encuestas.iiec.unam.mx/987485][Evaluación de los compañeros]]                 |
+  | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila                     | [[https://youtu.be/5z12y2t21VI][Ver aquí]] | [[./AvilaIker-RomeroChristian/ARI_RPCG_SO_G06_Documento_BTRFS.pdf][Documento]], [[./AvilaIker-RomeroChristian/ARI_GRC_SO_G06_Presentacion_BTRFS.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/335489][Evaluación de los compañeros]]                 |
+  | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez                          | [[https://youtu.be/Wspth7qFlwM][Ver aquí]] | [[./MelendezGomez-ZambranoSerrano/ProtegerSO_DocTexto.pdf][Documento]], [[./MelendezGomez-ZambranoSerrano/Presentacion_ProtegerSO.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/278652][Evaluación de los compañeros]]                 |
   | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana                 |          |                                                                                                 |                                              |
   | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       | Luis Martínez y Joseph Urbano                             |          |                                                                                                 |                                              |
   | 2025.05.12 | /Listener/: Propósito, intereacción y usos                                                    | Erick Nava Santiago y Eric Ramírez Valdovinos             |          |                                                                                                 |                                              |
