Evaluación de las últimas 3 presentaciones del semestre

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -30,12 +30,12 @@
   | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela                  | [[https://youtu.be/_Z9VpCACiHk][Ver aquí]] | [[./JimenezYordi-ValenzuelaGustavo/presentacion.pdf][Presentación]], [[./JimenezYordi-ValenzuelaGustavo/LZNT1.cpp][Código ejemplo (compresión)]]                                                       | [[./JimenezYordi-ValenzuelaGustavo/resultados_encuesta.pdf][Resultados de la encuesta]], [[./JimenezYordi-ValenzuelaGustavo/evaluacion.org][Evaluación global]] |
   | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila                     | [[https://youtu.be/5z12y2t21VI][Ver aquí]] | [[./AvilaIker-RomeroChristian/ARI_RPCG_SO_G06_Documento_BTRFS.pdf][Documento]], [[./AvilaIker-RomeroChristian/ARI_GRC_SO_G06_Presentacion_BTRFS.pdf][Presentación]]                                                                         | [[./AvilaIker-RomeroChristian/resultados_encuesta.pdf][Resultados de la encuesta]], [[./AvilaIker-RomeroChristian/evaluacion.org][Evaluación global]] |
   | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez                          | [[https://youtu.be/Wspth7qFlwM][Ver aquí]] | [[./MelendezGomez-ZambranoSerrano/ProtegerSO_DocTexto.pdf][Documento]], [[./MelendezGomez-ZambranoSerrano/Presentacion_ProtegerSO.pdf][Presentación]]                                                                         | [[./MelendezGomez-ZambranoSerrano/resultados_encuesta.pdf][Resultados de la encuesta]], [[./MelendezGomez-ZambranoSerrano/evaluacion.org][Evaluación global]] |
-  | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana                 | [[https://youtu.be/5eu5o1BlQiE][Ver aquí]] | [[./GarciaRodrigo-SantanaGustavo/Aspectos de sistemas operativos en los dispositivos IoT.pdf][Documento]], [[./GarciaRodrigo-SantanaGustavo/Presentación.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/951915][Evaluación de los compañeros]]                 |
-  | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       | Luis Martínez y Joseph Urbano                             | [[https://youtu.be/rciMB9up6Ps][Ver aquí]] | [[./MartinezLuis-UrbanoJoseph/Reporte - SO en equipos naúticos.pdf][Reporte]], [[./MartinezLuis-UrbanoJoseph/Presentación - SO en equipos naútico.pdf][Presentación]]                                                                           | [[https://encuestas.iiec.unam.mx/826344][Evaluación de los compañeros]]                 |
-  | 2025.05.12 | /Listener/: Propósito, interacción y usos                                                     | Erick Nava Santiago y Eric Ramírez Valdovinos             | [[https://youtu.be/fTE5_1qtk-Q][Ver aquí]] | [[./RamirezEric-NavaErick/DocumentaciónListenerNavaErick-RamirezEric.pdf][Documento]], [[./RamirezEric-NavaErick/PresentacionListenersEventosYRespuestas.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/167786][Evaluación de los compañeros]]                 |
+  | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana                 | [[https://youtu.be/5eu5o1BlQiE][Ver aquí]] | [[./GarciaRodrigo-SantanaGustavo/Aspectos de sistemas operativos en los dispositivos IoT.pdf][Documento]], [[./GarciaRodrigo-SantanaGustavo/Presentación.pdf][Presentación]]                                                                         | [[./GarciaRodrigo-SantanaGustavo/resultados_encuesta.pdf][Resultados de la encuesta]], [[./GarciaRodrigo-SantanaGustavo/evaluacion.org][Evaluación global]] |
+  | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       | Luis Martínez y Joseph Urbano                             | [[https://youtu.be/rciMB9up6Ps][Ver aquí]] | [[./MartinezLuis-UrbanoJoseph/Reporte - SO en equipos naúticos.pdf][Reporte]], [[./MartinezLuis-UrbanoJoseph/Presentación - SO en equipos naútico.pdf][Presentación]]                                                                           | [[./MartinezLuis-UrbanoJoseph/resultados_encuesta.pdf][Resultados de la encuesta]], [[./RamirezEric-NavaErick/evaluacion.org][Evaluación global]] |
+  | 2025.05.12 | /Listener/: Propósito, interacción y usos                                                     | Erick Nava Santiago y Eric Ramírez Valdovinos             | [[https://youtu.be/fTE5_1qtk-Q][Ver aquí]] | [[./RamirezEric-NavaErick/DocumentaciónListenerNavaErick-RamirezEric.pdf][Documento]], [[./RamirezEric-NavaErick/PresentacionListenersEventosYRespuestas.pdf][Presentación]]                                                                         | [[./RamirezEric-NavaErick/resultados_encuesta.pdf][Resultados de la encuesta]], [[./RamirezEric-NavaErick/evaluacion.org][Evaluación global]]                                           |
   |------------+-----------------------------------------------------------------------------------------------+-----------------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
   # El semestre termina el 24 de mayo. Programo exposiciones hasta la semana del 12.
-  # van 33 alumnos que registran tema.
+
 * ¿Y el tema?
 
   ¿De qué tema presentar su exposición? De algún tema /relacionado con/ la
